--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/slick.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -78,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-rzGPPTtLbx mbr-fullscreen mbr-parallax-background" id="header2-6">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-rzGPPTtLbx mbr-fullscreen mbr-parallax-background" id="header2-6">
 
     
 
@@ -158,14 +159,19 @@
 
 </section>
 
-<section class="mbr-gallery mbr-slider-carousel cid-rFbIYnFdcn" id="gallery2-1i">
-
+<section class="mbr-instagram-feed" data-rows="1" data-per-row-slider="" data-spacing="4" data-full-width="" data-token="11135000923.727bfe1.c59ad3b7226c448fa5b53a8382d0a3d7" data-per-row-grid="4" id="instagram-feed-block-1b" data-rv-view="61" style="background-color: rgb(239, 239, 239); padding-top: 160px; padding-bottom: 160px;">
     
-
-    <div class="container">
-        <div><!-- Filter --><div class="mbr-gallery-filter container gallery-filter-active"><ul buttons="0"><li class="mbr-gallery-filter-all"><a class="btn btn-md btn-primary-outline active display-7" href="">All</a></li></ul></div><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Awesome"><div href="#lb-gallery2-1i" data-slide-to="0" data-toggle="modal"><img src="assets/images/07a-1350x1578-800x935.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p2" data-video-url="false" data-tags="Responsive"><div href="#lb-gallery2-1i" data-slide-to="1" data-toggle="modal"><img src="assets/images/a1-1500x1071-800x571.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery2-1i"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/07a-1350x1578.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/a1-1500x1071.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery2-1i"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery2-1i"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+    <div class="container container_toggle">
+        <div class="row">
+            <div class="col">
+                <div class="inst">
+                    <h1 class="inst__title align-center mbr-fonts-style display-2"><p>PROJETOS<br></p></h1>
+                    <div class="inst__content"></div>
+                    <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md btn-primary display-4" href="#">Show more</a></div>
+                </div>
+            </div>
+        </div>
     </div>
-
 </section>
 
 <section class="header1 cid-rzHmhKDChg" id="header16-e">
@@ -207,7 +213,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vBLu8jhdNRO26hvnm8Y2Bi3HIqpOXTM51CXzcfz+A5NBr8PSnbEEA+S9WNpjv0nuPjDWaHuQLFqvpmq8veppIw5JAbMNHQS6V0I8kDRs4fYFvNFcqyZcZu+hfl9FgPV0">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wrTqVw+tztHax1H3JaHh8z71CcF0QUbojneM4Ru60RTZSFzE+U3qcZrNpTosMWS5RzQaGriRwGL8khBiUsQlnIqtyqjq37QaJG4xnIcInENJ7zm9/22t2Jbgt3V2rg9b">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -268,7 +274,7 @@
                     Rebeba Grátis as mais recentes dicas de decoração e construção.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Mx5HQJerX5FacPegVjw2t2yLPPnr9PZhDuQB5TbZO6In45dJ4Q6aIWhKDdJQ1wT2oOokFA1hkUtuMX5QDurmFji4bgSAdRM5VKfPv6UPU7syQVlA3eJpl9HKR82XhhfI">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dDfh3IlA37jlannjj/Eczp2U2sJoD96psZYlfwI/7UXLn+/3upSefCwMqpcuhmxBEyL+P1fDugca0azT5VHESTMRssVHoyaJQ+87axQL/p9Pz4l/07oQ27QmW6GqC6u2">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato o mais breve possivel.</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -336,15 +342,10 @@
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/masonry/masonry.pkgd.min.js"></script>
-  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/index.js"></script>
+  <script src="assets/slick.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/slidervideo/script.js"></script>
-  <script src="assets/gallery/player.min.js"></script>
-  <script src="assets/gallery/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
   
