--- a/Aprenda-a-instalar-prateleiras-com-suporte-invisível.html
+++ b/Aprenda-a-instalar-prateleiras-com-suporte-invisível.html
@@ -67,7 +67,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="index.html#header16-e">Sobre nós&nbsp;</a>
-                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#gallery2-j">Projetos &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">Blog &nbsp;&nbsp;</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#gallery2-1g">Projetos &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page1.html">Blog &nbsp;&nbsp;</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="https://wa.me/+55 41 998962818"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn" style="color: rgb(193, 193, 193);"></span>
                     
                     Fale conosco</a></div>
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content4 cid-rzIceKpMqt" id="content4-s">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content4 cid-rzIceKpMqt" id="content4-s">
 
     
 
@@ -293,7 +293,7 @@
                     Rebeba Grátis as mais recentes dicas de decoração e construção.</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QQHQM5vcLXVt9yIuwNMGzZmm4AVTKfHu4oW8GMeEDsrbtheWAwdtV6N2j+AyKJ8BkqcT+aRidhA3/6/1y88eARC9hPArUC4T27ax2vtnwcXwn8FZLKsbA9+9tlZmOvI6">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="u4yDhBE/jQnUDfcNhZ7oLc2BMicQ+atq+sEZNczUpe/impBHvoPjilyU+Wwn8v25n0By/W+Qc7iH/luuKHj02WIjPxohey/KNA2hkGgWZvOb9XQPZ0xc1w/rAwO0BTRi">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, entraremos em contato o mais breve possivel.</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
