--- a/page3.html
+++ b/page3.html
@@ -67,7 +67,7 @@ page1.html
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#top">HOME</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-n">SERVIÇOS</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#gallery3-r">
                             PROJETOS</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#content15-s">
-                            SOBRE</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-y">CONTATO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-15">ORÇAMENTO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html#top">BLOG</a></li></ul>
+                            SOBRE</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-y">CONTATO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-15">ORÇAMENTO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html">BLOG</a></li></ul>
                 
                 
             </div>
@@ -86,11 +86,11 @@ page1.html
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>Como aproveitar melhor os espaços em apartamentos pequenos</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">
                     Dicas de organização dos espaços.</h4>
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="page3.html">VEJA MAIS</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="page4.html">VEJA MAIS</a></div>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to develop a free website - <a href="https://mobirise.site/x" style="color:#aaa;">Check it</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Created with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">Click for more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
