--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ page1.html
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="home.html">
+                    <a href="index.html">
                         <img src="assets/images/logo-png-121x121.png" alt="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -69,7 +69,7 @@ page1.html
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="home.html">HOME</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-n">SERVIÇOS</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="PROJETOS.html">PROJETOS</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-n">SERVIÇOS</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="PROJETOS.html">PROJETOS</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#content15-s">
                             SOBRE</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#form5-y">CONTATO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#features1-15">ORÇAMENTO</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="BLOG.html">BLOG</a></li></ul>
                 
@@ -182,7 +182,7 @@ page1.html
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sNHoczfQlBxrC+ktCfR3PfiO8Og7j+v+4JtGg8TwKptllEbcJ8PiMx7Rw/+8EefGDO8hNGAuxfpTKyDfHmGIU3MUub602Tvb7OKdWEq4yjIjht7oZO/V9NE3TQJK2fXc">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5GTA7ccJW3cu2q/dT5yfQQIPDUTsvH3d5ZJbwYh+uoFH2vfnib62GvfvEeWi/tYD4WTOh24FZ2Lnp2CZvj1RykR72Pd/fw3Pk33TQvrkOgX0xlki8MwBOOKpTIAetwG1">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some
@@ -271,7 +271,7 @@ page1.html
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">This <a href="https://mobirise.site/e" style="color:#aaa;">page</a> was created with Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise <a href="https://mobirise.site/u" style="color:#aaa;">web</a> templates</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
